古いコード削除＆外部ライブラリの整理

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "x264"]
-	path = x264
-	url = git://git.videolan.org/x264.git
 [submodule "openh264"]
 	path = openh264
 	url = https://github.com/cisco/openh264.git
 [submodule "libvpx"]
 	path = libvpx
 	url = https://github.com/webmproject/libvpx.git
+[submodule "thor"]
+	path = thor
+	url = https://github.com/cisco/thor.git
+[submodule "libde265"]
+	path = libde265
+	url = https://github.com/strukturag/libde265.git
