--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "libde265"]
 	path = native/libde265
 	url = https://github.com/strukturag/libde265.git
+[submodule "native/daala"]
+	path = native/daala
+	url = https://git.xiph.org/daala.git
+[submodule "native/ogg"]
+	path = native/ogg
+	url = https://git.xiph.org/ogg.git
