openH264を用いたエンコードのパラメータ指定機能を実装

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,7 @@
 all: struct_offset.js
 
-struct_offset.js: struct_offset.c
-	emcc -o $@ $< -I../native/libvpx
+struct_offset.js: struct_offset.cc
+	em++ -o $@ $<
 
 run: struct_offset.js
 	node $<
